blog crate practice, new hotkey mapping of create new file to explorer.newfile instead of workbench.action.files.newUntitledFile

--- a/settings.json
+++ b/settings.json
@@ -15,6 +15,10 @@
 "command": "workbench.action.focusActiveEditorGroup",
 "when": "filesExplorerFocus"
 },
+{
+    "key": "ctrl+n",
+    "command": "explorer.newFile"
+},
 ]
 
 //chrome toggle tab hot key:  control + # of tab 1-8
